--- a/TPx2/data/exports/visualization2.html
+++ b/TPx2/data/exports/visualization2.html
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Graph Visualization 1</title>
+    <title>Graph Visualization</title>
     <style>
         .node { fill: #4CAF50; stroke: #388E3C; stroke-width: 2px; }
         .edge { stroke: #757575; stroke-width: 2px; }
         .label { font-family: Arial; font-size: 12px; fill: #333; }
         .weight { font-family: Arial; font-size: 10px; fill: #E91E63; }
+        svg { background-color: #f5f5f5; }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-<svg width="600" height="400"></svg>
-<script>
-    const graphData = {
-        nodes: [
-            { id: "Paris", x: 100, y: 100 },
-            { id: "Lyon", x: 250, y: 200 },
-            { id: "Marseille", x: 150, y: 300 }
-        ],
-        edges: [
-            { source: "Paris", target: "Lyon", weight: 450 },
-            { source: "Lyon", target: "Marseille", weight: 300 }
-        ]
-    };
+    <h1>Graph Visualization</h1>
+    <svg width="800" height="600"></svg>
+    <script>
+        const graphData = {
+            nodes: [
+                { id: 'Paris', x: 600, y: 300 },
+{ id: 'Lyon', x: 301, y: 473 },
+{ id: 'Marseille', x: 300, y: 127 },
 
-    const svg = d3.select("svg");
+            ],
+            edges: [
+                { source: 'Paris', target: 'Lyon', weight: 450.0 },
+{ source: 'Lyon', target: 'Marseille', weight: 300.0 },
 
-    // Draw edges
-    svg.selectAll(".edge")
-        .data(graphData.edges)
-        .enter()
-        .append("line")
-        .attr("class", "edge")
-        .attr("x1", d => graphData.nodes.find(n => n.id === d.source).x)
-        .attr("y1", d => graphData.nodes.find(n => n.id === d.source).y)
-        .attr("x2", d => graphData.nodes.find(n => n.id === d.target).x)
-        .attr("y2", d => graphData.nodes.find(n => n.id === d.target).y);
+            ]
+        };
 
-    // Draw nodes
-    svg.selectAll(".node")
-        .data(graphData.nodes)
-        .enter()
-        .append("circle")
-        .attr("class", "node")
-        .attr("cx", d => d.x)
-        .attr("cy", d => d.y)
-        .attr("r", 20);
+        const svg = d3.select("svg");
+        const width = +svg.attr("width");
+        const height = +svg.attr("height");
 
-    // Add labels
-    svg.selectAll(".label")
-        .data(graphData.nodes)
-        .enter()
-        .append("text")
-        .attr("class", "label")
-        .attr("x", d => d.x)
-        .attr("y", d => d.y + 5)
-        .attr("text-anchor", "middle")
-        .text(d => d.id);
+        // Draw edges
+        svg.selectAll(".edge")
+            .data(graphData.edges)
+            .enter()
+            .append("line")
+            .attr("class", "edge")
+            .attr("x1", d => graphData.nodes.find(n => n.id === d.source).x)
+            .attr("y1", d => graphData.nodes.find(n => n.id === d.source).y)
+            .attr("x2", d => graphData.nodes.find(n => n.id === d.target).x)
+            .attr("y2", d => graphData.nodes.find(n => n.id === d.target).y);
 
-    // Add weights
-    svg.selectAll(".weight")
-        .data(graphData.edges)
-        .enter()
-        .append("text")
-        .attr("class", "weight")
-        .attr("x", d => (graphData.nodes.find(n => n.id === d.source).x +
-            graphData.nodes.find(n => n.id === d.target).x) / 2)
-        .attr("y", d => (graphData.nodes.find(n => n.id === d.source).y +
-            graphData.nodes.find(n => n.id === d.target).y) / 2)
-        .attr("text-anchor", "middle")
-        .text(d => d.weight);
-</script>
+        // Draw nodes
+        svg.selectAll(".node")
+            .data(graphData.nodes)
+            .enter()
+            .append("circle")
+            .attr("class", "node")
+            .attr("cx", d => d.x)
+            .attr("cy", d => d.y)
+            .attr("r", 20);
+
+        // Add labels
+        svg.selectAll(".label")
+            .data(graphData.nodes)
+            .enter()
+            .append("text")
+            .attr("class", "label")
+            .attr("x", d => d.x)
+            .attr("y", d => d.y + 5)
+            .attr("text-anchor", "middle")
+            .text(d => d.id);
+
+        // Add weights
+        svg.selectAll(".weight")
+            .data(graphData.edges)
+            .enter()
+            .append("text")
+            .attr("class", "weight")
+            .attr("x", d => (graphData.nodes.find(n => n.id === d.source).x +
+                            graphData.nodes.find(n => n.id === d.target).x) / 2)
+            .attr("y", d => (graphData.nodes.find(n => n.id === d.source).y +
+                            graphData.nodes.find(n => n.id === d.target).y) / 2)
+            .attr("text-anchor", "middle")
+            .text(d => d.weight);
+    </script>
 </body>
 </html>
